# internal/controller/http/sku.go
@@ -20,22 +20,22 @@ func NewSkuRouter(handler *gin.RouterGroup, s service.SkuService, l logger.Inter
 	h := &SkuRouter{service: s, logger: l}
 	skuRoutes := handler.Group("/sku")
 	{
-		skuRoutes.GET("/:providerCode", h.GetSkusByProviderCode)
-		skuRoutes.GET("/", h.GetSkusGroupByProvider)
+		skuRoutes.GET("/:supplierCode", h.GetSkusBySupplierCode)
+		skuRoutes.GET("/", h.GetSkusGroupBySupplier)
 	}
 }
 
 // BasePath /v1/api
 
-// @Summary Get card details by provider code
-// @Description Get card details by provider code
-// @Tags card-detail
-// @Param providerCode path string true "Provider code"
+// @Summary Get sku details by supplier code
+// @Description Get sku details by supplier code
+// @Tags sku
+// @Param supplierCode path string true "Supplier code"
 // @Success 200 {array} top-up-api_internal_schema.SkuResponse
-// @Router /card-detail/{providerCode} [get]
-func (h *SkuRouter) GetSkusByProviderCode(c *gin.Context) {
-	providerCode := c.Param("providerCode")
-	skus, err := h.service.GetSkusByProviderCode(c, providerCode)
+// @Router /sku/{supplierCode} [get]
+func (h *SkuRouter) GetSkusBySupplierCode(c *gin.Context) {
+	supplierCode := c.Param("supplierCode")
+	skus, err := h.service.GetSkusBySupplierCode(c, supplierCode)
 	if err != nil {
 		h.logger.Error(errors.New("error getting card details"), zap.Error(err))
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -44,15 +44,15 @@ func (h *SkuRouter) GetSkusByProviderCode(c *gin.Context) {
 	c.JSON(http.StatusOK, mapper.SuccessResponse(skus))
 }
 
-// @Summary Get card details grouped by provider
-// @Description Get card details grouped by provider
-// @Tags card-detail
-// @Success 200 {object} top-up-api_internal_schema.SkusGroupByProvider
-// @Router /card-detail [get]
-func (h *SkuRouter) GetSkusGroupByProvider(c *gin.Context) {
-	skus, err := h.service.GetSkusGroupByProvider(c)
+// @Summary Get card details grouped by supplier
+// @Description Get card details grouped by supplier
+// @Tags sku
+// @Success 200 {object} top-up-api_internal_schema.SkusGroupBySupplier
+// @Router /sku [get]
+func (h *SkuRouter) GetSkusGroupBySupplier(c *gin.Context) {
+	skus, err := h.service.GetSkusGroupBySupplier(c)
 	if err != nil {
-		h.logger.Error(errors.New("error getting card details grouped by provider"), zap.Error(err))
+		h.logger.Error(errors.New("error getting card details grouped by supplier"), zap.Error(err))
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
